<resources>
    <string name="app_name">ShowPetPictures</string>
    <string name="textSelect">선택을 시작하겠습니까?</string>
    <string name="checkStart">시작함</string>
    <string name="textFavorite">좋아하는 안드로이드 버전은?</string>
    <string name="radioDog">강아지</string>
    <string name="radioCat">고양이</string>
    <string name="radioChick">병아리</string>
    <string name="btnFinish">종료</string>
    <string name="btnInit">처음으로</string>
</resources>