<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/marginMedium"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSelect"
        android:textSize="@dimen/textSizeMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/checkStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkStart"
        android:textSize="@dimen/textSizeSmall"/>

    <LinearLayout
        android:id="@+id/linearSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textFavorite"
            android:textSize="@dimen/textSizeMedium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginMedium">
            <RadioButton
                android:id="@+id/radioDog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioDog"
                android:textSize="@dimen/textSizeSmall"/>
            <RadioButton
                android:id="@+id/radioCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioCat"
                android:textSize="@dimen/textSizeSmall"/>
            <RadioButton
                android:id="@+id/radioChick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioChick"
                android:textSize="@dimen/textSizeSmall"/>
        </RadioGroup>

        <ImageView
            android:id="@+id/imgV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/dog"
            android:scaleType="fitXY"/>

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnFinish"/>

        <Button
            android:id="@+id/btnInit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnInit"/>
    </LinearLayout>

</LinearLayout>